[Picture in Picture] Only handle space key on Mac.

The buttons on other platforms handle the space key as well. This change
only adds the handling to toggle play/pause to Mac. The close button
is not handled since tabbing is not handled and there are no visual
affordances for which button is focused on Mac. These exist on other
platforms.

Bug: 879139
Change-Id: I40135a7c70fd8d737a2b3b368bfad968d0eeb225
Reviewed-on: https://chromium-review.googlesource.com/1196931
Reviewed-by: CJ DiMeglio <lethalantidote@chromium.org>
Commit-Queue: apacible <apacible@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587788}
Former-commit-id: 14596236d5a9a8fc7c552ffedba78d78bcf4b67a